# flux

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: InitGitSubmodules.cmake
include/: MainWindow.h  PoolEditor.h  flux.h
src/: MainWindow.cpp  PoolEditor.cpp  PoolEditor.ui  main.cpp
